     - reassign=yes|no(default yes) if no, check for a unit and do not assign to another
     - [auto_recall] sub-tag, if assigned to recall list, gives [recall] attributes (no SUF)
     - [else] sub-tag, WML to execute if no unit found for the role
   * New help_text= key for [trait] to set the description displayed in the help.
   * Added tag id= [fire_event], which allows raising events by id
 * Lua API:
   * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The old
     function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
* Performance:
   * When a heuristic determines that it's probably faster, the game predicts battle
     outcome by simulating a few thousand fights instead of calculating exact
     probabilities. This method is inexact, but in very complex battles (extremely
     high HP, drain, slow, berserk, etc.) it's significantly faster than the default
     damage calculation method.

Version 1.13.5:
 * Campaigns:
   * An Orcish Incursion:
     * Linaera can recruit Mage, and cannot recruit Elves
   * Heir to the Throne:
     * Add journey tracks for 19c/20b path.
     * New sprites for Li'sar.
     * S10: Clarify objectives and change egg image on capture.
     * S19c: Removed the undead and the swamps.
   * Tutorial
     * Improve translatability for languages with gender-dependent pronouns
     * S1: Fix unit being deselected after the select message
     * S2: Highlight (outline) talked-about locations
   * Legend of Wesmere
     * S3: fix bug which silently disabled Urudin retreat AI
 * Graphics:
   * Updated generic portrait of Mermaid Initiate.
   * Added generic portrait for Giant Spider.
 * Language and i18n:
   * Updated translations: British English, Galician, German, Italian, Japanese,
     Polish, Portuguese, RACV, Russian, Scottish Gaelic, Spanish
 * Networking:
   * Reworked the multiplayer server to use asio functions for networking